# compute-shader-game-of-life

./: .gitignore  CMakeLists.txt  README.md
libraries/: CMakeLists.txt
libraries/itugl/: CMakeLists.txt
libraries/itugl/include/ituGL/core/: Object.h
libraries/itugl/src/ituGL/application/: Window.cpp
libraries/itugl/src/ituGL/asset/: Texture2DLoader.cpp  TextureCubemapLoader.cpp
src/: CPUGameOfLife.cpp  CPUGameOfLife.hpp  CPUGameOfLifeSimulation.cpp  CPUGameOfLifeSimulation.hpp  ComputeShaderLifeSimulation.cpp  ComputeShaderLifeSimulation.hpp  ConwayApplication.cpp  ConwayApplication.h  ConwayApplication.hpp  GPUGameOfLife.cpp  GPUGameOfLife.hpp  GPUGameOfLifeSimulation.cpp  GPUGameOfLifeSimulation.hpp  GameOfLife.cpp  GameOfLife.hpp  GameOfLifeSimulation.cpp  GameOfLifeSimulation.hpp  LifeSimulation.cpp  LifeSimulation.hpp  SingleThreadedLifeSimulation.cpp  SingleThreadedLifeSimulation.hpp  main.cpp  util.hpp
src/shaders/: fullscreen.frag  fullscreen.vert  gameoflife.comp
